--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -3,7 +3,7 @@ name: Deploy Web
 on:
   push:
     branches:
-      - 'main'
+      - main
 
 jobs:
   build-and-deploy:
@@ -19,14 +19,28 @@ jobs:
           cache: npm
           cache-dependency-path: '**/package-lock.json'
 
-      - name: Install Dependency Web Version
+      - name: Install Dependency Web
         working-directory: ./web
         run: npm ci
-        env:
-          GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
 
-      - name: Deploy Web Version
+      - name: Build Web
         working-directory: ./web
         run: npm run build
-        env:
-          GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload production-ready build
+        uses: actions/upload-artifact@v2
+        with:
+          name: production-files
+          path: ./web/dist
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: production-files
+          path: ./web/dist
+
+      - name: Deploy to GitHub Pages
+        uses: paeceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./web/dist
