--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -44,4 +44,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           GH_TOKEN: ${{ github:actor }}:${{ secrets.GITHUB_TOKEN}}
-          publish_dir: ./public
+          publish_dir: ./web/dist
