--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -7,6 +7,10 @@ on:
 
 jobs:
   build-and-deploy:
+    permissions:
+      pages: write
+      id-token: write
+
     runs-on: ubuntu-latest
     environment:
       name: github-pages
