--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -27,8 +27,20 @@ jobs:
         working-directory: ./web
         run: npm run build
 
-      - name: Deploy Web
-        working-directory: ./web
-        run: npm run deploy
-        env:
+      - name: Upload production-ready build
+        uses: actions/upload-artifact@v2
+        with:
+          name: production-files
+          path: ./web/dist
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: production-files
+          path: ./web/dist
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./publish
