--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -13,12 +13,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Use Node.js
+      - name: Setup Node.JS
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: npm
-          cache-dependency-path: '**/package-json'
+          cache-dependency-path: '**/package-lock.json'
 
       - name: Install Dependency
         working-directory: ./server
